# Ising_2D

./: .gitignore  CMakeLists.txt  flake.nix  imgui.ini  ising.cc  vcpkg.json
.direnv/: flake-profile-dd1883cdcf350dec1c98ecf835fa717b895ef588  flake-profile-dd1883cdcf350dec1c98ecf835fa717b895ef588.rc
.direnv/flake-inputs/: gk3arh2dn4q7haydk5mdmawwk1xh2j25-source
.nix/: flake.nix
resources/shaders/: quad.frag  quad.vert
src/: CMakeLists.txt  ising.cc  shader.cc  shader.hh  utils.cc  utils.hh
src/Core/: Application.cc  Application.h  CMakeLists.txt  Physics.cc  Physics.h  Shader.cc  Shader.h  Texture.cc  Texture.h
